################################################################################
#
# Change log of IntaRNA available at 
#
# https://github.com/BackofenLab/IntaRNA
#
################################################################################

development version

190307 Martin Raden :
 * IntaRNA/SeedConstraint :
   + bpGUallowed : whether or not GU base pairs are allowed within seeds
   + isGUallowed() : returns bpGUallowed
   + maxEhybrid : maximal hybridization energy
   + getMaxEhybrid()
 * IntaRNA/RnaSequence :
   + bpGUcodes : base pair codes for GU and UG
   + isGU() : tests whether or not two positions can form a GU base pair
 * IntaRNA/InteractionEnergy :
   + isGU() : tests whether or not two positions can form a GU base pair
 * IntaRNA/SeedHandler :
   * isFeasibleSeedBasePair() :
     + check if GU base pair are allowed or not
 * IntaRNA/HelixHandlerNoBulgeMax :
   * fillHelixSeed() : 
     * now based on seed iteration to speed up
 * CommandLineParsing :
   + helixMinPu : minimal unpaired probability (per sequence) of considered
     helices (to make interface analogously to seed constraints)
   - helixMaxED : replaced by helixMinPu
   + seedNoGU : if present, GU base pairs are not allowed within seeds
   + seedMaxEhybrid : maximal hybridization energy (excl.) for seeds
 * README.md :
   + seedNoGU
   + seedMaxEhybrid
   + helixMinPu
   - helixMaxED
   * figure links corrected (to be working within github pages) 

190306 Martin Raden :
 * README.md :
   + helix constraints documented
 * IntaRNA/HelixHandlerUnpaired :
   * adaptation to HelixConstraint::evalFullE() semantics
 * bin/CommandLineParsing :
   + helixFullE : replaces helixNoED
   - helixNoED : replaced by helixFullE
   * model : renamed 'L' to 'B' since only using blocks of stable helices
 * renaming Predictor*MaxHelix* to Predictor*HelixBlock*
 * IntaRNA/SeedHandler :
   + updateToNextSeed() : generic seed iteration functionality
 * IntaRNA/SeedHandlerIdxOffset :